# dimos

./: .gitignore  AGENTS.md  README-cjsg.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: code-cleanup.yml  docker.yml  tests.yml
dimos/: conftest.py
dimos/agents/: agent.py  conftest.py  demo_agent.py  test_agent.py  utils.py  vlm_agent.py  vlm_stream_tester.py  web_human_input.py
dimos/agents/fixtures/: test_can_call_again_on_error.json  test_can_call_tool.json
dimos/agents/mcp/: README.md  conftest.py  mcp_adapter.py  mcp_client.py  mcp_server.py  test_mcp_client.py  test_mcp_client_unit.py  test_mcp_server.py
dimos/agents/skills/: google_maps_skill_container.py  navigation.py  osm.py  person_follow.py  test_google_maps_skill_container.py  test_gps_nav_skills.py  test_navigation.py  test_unitree_skill_container.py
dimos/agents_deprecated/memory/: spatial_vector_db.py  test_image_embedding.py
dimos/agents_deprecated/modules/: base_agent.py
dimos/control/: __init__.py  blueprints.py  components.py  coordinator.py  hardware_interface.py
dimos/control/examples/: twist_base_keyboard_teleop.py
dimos/control/tasks/: teleop_task.py
dimos/core/: _test_future_annotations_helper.py  blueprints.py  conftest.py  daemon.py  docker_runner.py  global_config.py  log_viewer.py  module.py  module_coordinator.py  rpc_client.py  run_registry.py  stream.py  test_blueprints.py  test_cli_stop_status.py  test_core.py  test_daemon.py  test_e2e_daemon.py  test_mcp_integration.py  test_native_module.py  test_per_run_logs.py  test_rpcstress.py  test_stream.py  test_worker.py  testing.py  transport.py  worker.py  worker_manager.py
dimos/core/resource_monitor/: __init__.py  logger.py  monitor.py  stats.py
dimos/core/tests/: demo_devex.py  demo_mcp_killtest.py  stress_test_blueprint.py  stress_test_module.py
dimos/e2e_tests/: conf_types.py  conftest.py  dimos_cli_call.py  test_control_coordinator.py  test_dimos_cli_e2e.py  test_person_follow.py  test_scan_and_follow_person.py  test_simulation_module.py  test_spatial_memory.py
dimos/hardware/drive_trains/: __init__.py  registry.py  spec.py
dimos/hardware/manipulators/: README.md
dimos/manipulation/: __init__.py  blueprints.py  manipulation_module.py  pick_and_place_module.py  test_manipulation_unit.py
dimos/manipulation/control/: dual_trajectory_setter.py  target_setter.py  trajectory_setter.py
dimos/manipulation/grasping/: demo_grasping.py  graspgen_module.py  grasping.py
dimos/manipulation/planning/: README.md
dimos/mapping/: costmapper.py  test_voxels.py  voxels.py
dimos/mapping/occupancy/: test_extrude_occupancy.py
dimos/mapping/pointclouds/: test_occupancy.py
dimos/memory/: embedding.py
dimos/memory/timeseries/: legacy.py  test_legacy.py
dimos/models/embedding/: test_embedding.py
dimos/models/qwen/: bbox.py  video_query.py
dimos/models/vl/: base.py  create.py  openai.py  test_base.py  test_captioner.py  test_vlm.py
dimos/msgs/foxglove_msgs/: ImageAnnotations.py
dimos/msgs/geometry_msgs/: Point.py  PointStamped.py  __init__.py  test_PointStamped.py  test_TwistStamped.py
dimos/msgs/nav_msgs/: test_OccupancyGrid.py
dimos/msgs/sensor_msgs/: PointCloud2.py  test_PointCloud2.py
dimos/msgs/tf2_msgs/: test_TFMessage_lcmpub.py
dimos/msgs/visualization_msgs/: EntityMarkers.py  __init__.py
dimos/navigation/: bbox_navigation.py  demo_ros_navigation.py  rosnav.py
dimos/navigation/frontier_exploration/: wavefront_frontier_goal_selector.py
dimos/navigation/replanning_a_star/: module.py
dimos/navigation/visual/: query.py
dimos/perception/: demo_object_scene_registration.py  object_scene_registration.py  object_tracker_3d.py  perceive_loop_skill.py  spatial_perception.py  test_spatial_memory.py  test_spatial_memory_module.py
dimos/perception/detection/: conftest.py  module2D.py  module3D.py  person_tracker.py
dimos/protocol/pubsub/: test_pattern_sub.py  test_spec.py
dimos/protocol/rpc/: test_spec.py
dimos/protocol/service/: lcmservice.py  test_lcmservice.py  test_system_configurator.py
dimos/protocol/tf/: test_tf.py
dimos/robot/: all_blueprints.py  foxglove_bridge.py  get_all_blueprints.py  test_all_blueprints.py  test_all_blueprints_generation.py
dimos/robot/cli/: dimos.py  topic.py
dimos/robot/drone/: README.md  __init__.py  camera_module.py  connection_module.py  dji_video_stream.py  drone_tracking_module.py  test_drone.py
dimos/robot/unitree/: connection.py  keyboard_teleop.py  mujoco_connection.py  rosnav.py
dimos/simulation/manipulators/: sim_module.py
dimos/simulation/mujoco/: mujoco_process.py  shared_memory.py
dimos/spec/: control.py  mapping.py  nav.py  perception.py
dimos/teleop/: README.md
dimos/teleop/keyboard/: keyboard_teleop_module.py
dimos/teleop/phone/: README.md  blueprints.py  phone_extensions.py  phone_teleop_module.py
dimos/teleop/quest/: README.md  blueprints.py  quest_extensions.py  quest_teleop_module.py  quest_types.py
dimos/types/: manipulation.py  test_weaklist.py
dimos/utils/: colors.py  human.py  logging_config.py  metrics.py  test_data.py  test_reactive.py  test_transform_utils.py
dimos/utils/cli/: dtop.py
dimos/utils/decorators/: __init__.py  decorators.py  test_decorators.py
dimos/utils/docs/: doclinks.py  test_doclinks.py
dimos/utils/testing/: moment.py  test_moment.py
dimos/visualization/rerun/: bridge.py  test_viewer_integration.py
dimos/web/command-center-extension/: README.md  package.json
dimos/web/websocket_vis/: README.md  websocket_vis_module.py
docker/dev/: Dockerfile
docker/python/: Dockerfile
docs/: requirements.md
docs/agents/docs/: index.md
docs/development/: grid_testing.md  profiling_dimos.md  testing.md  writing_docs.md
docs/installation/: osx.md  ubuntu.md
docs/usage/: blueprints.md  cli.md  configuration.md  lcm.md  native_modules.md  transforms.md  visualization.md
examples/: camera_grayscale.py  rpc_calls.py
examples/simplerobot/: README.md  simplerobot.py
scripts/: install.sh
(+115 files in other folders)
